# personal_portfolio

./: .env  .gitignore  Cargo.toml
marketplace-rental/rocket/: Cargo.toml  README.md  Rocket.setup.toml  model.rs
marketplace-rental/rocket/migrations/2023-05-05-161548_create_users/: up.sql
marketplace-rental/rocket/src/: main.rs  models.rs  schema.rs
src/: main.rs
src/blog/: mod.rs  routers.rs
src/config/: db.rs
