[package]
name = "personal_portfolio"
version = "0.1.0"
authors = ["Nick  Tom Thomas <nickbetty2000@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
diesel = { version = "1.4.5", features = ["postgres","chrono","r2d2"] }
dotenv = "0.15.0"
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"
chrono = {version="0.4.19",features=["serde"]}
r2d2 = "0.8.9"
diesel_migrations = "1.4.0"
