[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version ="2.0.4", features = ["postgres"]}
diesel_migrations = "2.0.0"
rocket = {version ="=0.5.0-rc.3",features= ["json"]}
rocket_contrib ={ version ="0.4.11", features = ["databases","json" ]}
rocket_sync_db_pools = {version="0.1.0-rc.3", features = ["diesel_postgres_pool"]}
